force-app/main/default/objects/BRC_PR_Allocation__c/BRC_PR_Allocation__c.object-meta.xml
<CustomObject>
    <description>Junction to allocate a BRC to PRs</description>
    <label>BRC-PR Allocation</label>
    <nameField>
        <displayFormat>BPA-{0}</displayFormat>
        <label>BRC-PR Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRC-PR Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>