force-app/main/default/objects/BRC_PR_Allocation__c/fields/Bank_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Bank_Receipt__c</fullName>
    <label>Bank Receipt</label>
    <referenceTo>Bank_Receipt__c</referenceTo>
    <relationshipLabel>BRC-PR Allocations</relationshipLabel>
    <relationshipName>BRC_PR_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>