force-app/main/default/objects/BRC_PR_Allocation__c/fields/BRC_Mode__c.field-meta.xml
<CustomField>
    <fullName>BRC_Mode__c</fullName>
    <description>Used to validate BRC and PR modes against acceptable matrix</description>
    <formula>TEXT(Bank_Receipt__r.BRC_Mode__c)</formula>
    <label>BRC Mode</label>
    <type>Text</type>
</CustomField>