force-app/main/default/objects/BRC_PR_Allocation__c/fields/BRC_PR_Number_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>BRC_PR_Number_Snapshot__c</fullName>
    <label>BRC-PR Number Snapshot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>