force-app/main/default/objects/BRC_PR_Allocation__c/fields/Deallocated__c.field-meta.xml
<CustomField>
    <fullName>Deallocated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deallocated?</label>
    <type>Checkbox</type>
</CustomField>