force-app/main/default/objects/BRC_PR_Allocation__c/fields/Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Request</label>
    <referenceTo>Payment_Request__c</referenceTo>
    <relationshipLabel>BRC-PR Allocations</relationshipLabel>
    <relationshipName>BRC_PR_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>