force-app/main/default/objects/BRC_PR_Allocation__c/fields/PR_Amount__c.field-meta.xml
<CustomField>
    <fullName>PR_Amount__c</fullName>
    <label>PR Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>