force-app/main/default/objects/BRC_PR_Allocation__c/fields/PR_Mode__c.field-meta.xml
<CustomField>
    <fullName>PR_Mode__c</fullName>
    <description>Used to validate BRC and PR modes against acceptable matrix</description>
    <formula>TEXT(Payment_Request__r.Mode__c)</formula>
    <label>PR Mode</label>
    <type>Text</type>
</CustomField>