force-app/main/default/objects/BRC_PR_Allocation__c/fields/PR_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>PR_Status_Formula__c</fullName>
    <formula>TEXT(Payment_Request__r.Status__c)</formula>
    <label>PR Status Formula</label>
    <type>Text</type>
</CustomField>