force-app/main/default/objects/BRC_PR_Allocation__c/validationRules/Immutability_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Immutability_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(BRC_PR_Number_Snapshot__c)</errorConditionFormula>
    <errorMessage>Field : BRC_PR_Allocation__c.BRC_PR_Number_Snapshot__c is immutable.</errorMessage>
</ValidationRule>